--- a/src/index.html
+++ b/src/index.html
@@ -32,46 +32,29 @@
 
 <body>
 
+
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <!-- <h1 class="logo me-auto"><a href="index.html">Mentor</a></h1> -->
+      <!-- <h1 class="logo me-auto"><a href="#">Mentor</a></h1> -->
       <a href="index.html" class="logo me-auto"><img src="assets/img/telecom-logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="active" href="index.html">Esasy sahypa</a></li>
-          <li><a href="trainers.html">Media</a></li>
-          <li><a href="events.html">Hyzmatlar</a></li>
-          <li><a href="about.html">Sargyt</a></li>
-          <li><a href="pricing.html">Poçta</a></li>
-          <li><a href="pricing.html">KSS</a></li>
-
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#">Media</a></li>
+          <li><a href="#">Hyzmatlar</a></li>
+          <li><a href="#">Sargyt</a></li>
+          <li><a href="#">Poçta</a></li>
+          <li><a href="#">KSS</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
+
 
   <!-- <div class="video-container">
     <video src="assets/video/video_banner.mp4" width="100%" height="150px" autoplay="" playsinline="" loop="" muted="">
@@ -84,7 +67,7 @@
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
       <h1>Fiziki şahslar üçin internet hyzmatynyň nyrhnamalary</h1>
       <h2>2023-nji ýylyň mart aýynyň 1-den fiziki şahslar üçin internet hyzmatynyň täze nyrhnamalary girizildi.</h2>
-      <!-- <a href="courses.html" class="btn-get-started">Giňişleýin</a> -->
+      <!-- <a href="#" class="btn-get-started">Giňişleýin</a> -->
       <a href="#" class="btn-get-started">Giňişleýin</a>
     </div>
   </section><!-- End Hero -->
@@ -127,7 +110,7 @@
           <p>"Türkmentelekom" EAK-nyň hyzmatlaryny sazlamak işleri üçin biziň hünärmenlerimiz Siziň bilen habarlaşarlar</p>
         </div>
         <div class="button-part">
-          <a class="btn btn-primary text-light" href="">Geçmek</a>
+          <a class="btn btn-primary text-light" target="_blank" href="contact.html">Geçmek</a>
         </div>
       </div>
     </section>
@@ -184,7 +167,7 @@
     <section id="news" class="news">
       <div class="container" data-aos="fade-up">
         <h2 class="m-3">Täzelikler</h2>
-        <div class="row" data-aos="zoom-in" data-aos-delay="100">
+        <div class="row" id="newsWrap" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/news/afadadada.webp" class="img-fluid" alt="">
@@ -351,6 +334,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/app.js"></script>
+  <script src="assets/js/news.js"></script>
 
 </body>
 
