--- a/src/index.html
+++ b/src/index.html
@@ -167,35 +167,12 @@
     <section id="news" class="news">
       <div class="container" data-aos="fade-up">
         <h2 class="m-3">Täzelikler</h2>
-        <div class="row" id="newsWrap" data-aos="zoom-in" data-aos-delay="100">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="assets/img/news/afadadada.webp" class="img-fluid" alt="">
-              <div class="member-content">
-                <h4>«Balkan» gämi gurluşyk we abatlaýyş zawody» Damen deňziň düýbüni çuňaldyjy gämisiniň ýygnamak işlerine başlaýar</h4>
-              </div>
-            </div>
+        <div class="news-slider swiper" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper">
+            
           </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="assets/img/news/gami_n9ib5dv.jpg" class="img-fluid" alt="">
-              <div class="member-content">
-                <h4>«PostShop» marketpleýsi Aşgabatda ilkinji oflaýn-dükanyny açdy</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="assets/img/news/mejlis.webp" class="img-fluid" alt="">
-              <div class="member-content">
-                <h4>Türkmenistanyň Mejlisi käbir kanunlara üýtgetmeler we goşmaçalar girizdi</h4>
-              </div>
-            </div>
-          </div>
-
         </div>
+    
 
       </div>
     </section><!-- End News Section -->
@@ -326,11 +303,9 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/app.js"></script>
@@ -339,3 +314,4 @@
 </body>
 
 </html>
+
