--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
         <h2 class="m-3">Täzelikler</h2>
         <div class="news-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
-            
+            <div class="d-flex fs-1 text-center my-5 fw-bolder text-primary" style="margin: 0 auto">Loading...</div>
           </div>
         </div>
     
