--- a/src/contact.html
+++ b/src/contact.html
@@ -110,7 +110,7 @@
                   <input type="number" name="phonenumber" class="form-control" id="phonenumber" placeholder="Telefon belgisi" required>
                 </div>
                 <div class="col-md-6 form-group mt-3">
-                  <input type="text" class="form-control" name="homenumber" id="homenumber" placeholder="Öý telefon belgisi" required>
+                  <input type="number" class="form-control" name="homenumber" id="homenumber" placeholder="Öý telefon belgisi" required>
                 </div>
               </div>
               <div class="form-group mt-3">
@@ -119,11 +119,11 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Maglumat" required></textarea>
               </div>
-              <!-- <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div> -->
+              <div class="my-3">
+                <div class="loading">Sargyt işlenilýär...</div>
+                <div class="error-message">Sargyt iberilmedi. Täzeden doldurmagyňyzy haýyş edýäris</div>
+                <div class="sent-message">Siziň sargydyňyz iberildi. Sag boluň!</div>
+              </div>
               <div class="text-center"><button type="submit">Sargyt ugratmak</button></div>
             </form>
   
