--- a/src/contact.html
+++ b/src/contact.html
@@ -74,20 +74,20 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>Ýerleşýän ýeri:</h4>
+                <p>Änew ş. Watan köç. j. 6</p>
               </div>
   
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
+                <h4>Poçta:</h4>
+                <p>info@telecom.tm</p>
               </div>
   
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>Telefon:</h4>
+                <p>+993(137) 3-51-41</p>
               </div>
   
             </div>
